# tiqets-assignment

./: .dockerignore  DATA_MODEL.md  DEPLOYMENT.md  Dockerfile  README.md  main.py  output.csv  pyproject.toml
data/: orders_with_barcodes.csv
tests/integration/: test_integration.py
tests/unit/: test_processor.py
tiqets_assignment/: __init__.py  cli.py  io.py  models.py  processor.py
