[project]
name = "tiqets-assignment"
version = "0.1.0"
description = "Assignment for Tiqets Backend engineer interview process"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
ti4-aggregate = "tiqets_assignment.cli:main"
ti4-test = "pytest:main"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["tiqets_assignment"]

[tool.uv]
package = true
